--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "~4.16.1"
   },
   "devDependencies": {
-    "eslint": "^6.7.1"
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
