--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "command-line-args": "^5.1.1",
     "core-js": "^2.6.5",
     "debug": "^4.1.1",
     "eslint": "^5.15.1",
