--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.0",
     "core-js": "^2.6.5",
     "debug": "^4.1.1",
     "eslint": "^5.15.1",
