--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "^1.7.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
+    "migrate": "^1.6.2",
     "mongoose": "^4.13.17",
     "morgan": "^1.9.1",
     "popper.js": "^1.14.7",
