Update to latest versions of deps

--- a/package.json
+++ b/package.json
@@ -3,55 +3,55 @@
   "version": "2.0.2",
   "scripts": {
     "start": "node ./bin/server.js --db-uri $DB_URI",
+    "start:windows": "node ./bin/server.js --db-uri %DB_URI%",
     "test": "mocha",
     "mocha": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=./test-results/mocha.xml --exit"
   },
-  "private": true,
   "dependencies": {
-    "bluebird": "^3.5.3",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.3.1",
-    "command-line-args": "^5.1.1",
-    "command-line-usage": "^6.1.0",
-    "core-js": "^2.6.5",
-    "debug": "^4.1.1",
-    "eslint": "^5.15.1",
-    "express": "^4.16.4",
-    "express-fileupload": "^1.0.0",
-    "express-jwt": "^5.3.1",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^5.1.1",
+    "command-line-args": "^5.2.0",
+    "command-line-usage": "^6.1.1",
+    "core-js": "^3.17.3",
+    "debug": "^4.3.2",
+    "eslint": "^7.32.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-jwt": "^6.1.0",
     "fs": "0.0.1-security",
-    "http-errors": "^1.7.1",
-    "jquery": "^3.3.1",
-    "jsonwebtoken": "^8.5.0",
-    "migrate": "^1.6.2",
-    "mongoose": "^5.8.3",
-    "morgan": "^1.9.1",
-    "popper.js": "^1.14.7",
-    "rotating-file-stream": "^1.4.0",
-    "rxjs": "^6.4.0",
+    "http-errors": "^1.8.0",
+    "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "migrate": "^1.7.0",
+    "mongoose": "^6.0.6",
+    "morgan": "^1.10.0",
+    "popper.js": "^1.16.1",
+    "rotating-file-stream": "^2.1.5",
+    "rxjs": "^7.3.0",
     "serve-favicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
-    "winston": "^3.2.1",
+    "winston": "^3.3.3",
     "xss-clean": "^0.1.1",
-    "zone.js": "^0.8.29"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.1",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "chai-shallow-deep-equal": "^1.4.6",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "^2.99.1",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-junit-reporter": "^1.2.0",
-    "mocha": "^5.2.0",
-    "mocha-junit-reporter": "^1.18.0",
-    "protractor": "^5.4.2",
-    "sinon": "^7.2.7"
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^3.9.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-firefox-launcher": "^2.1.1",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-junit-reporter": "^2.0.1",
+    "mocha": "^9.1.1",
+    "mocha-junit-reporter": "^2.0.0",
+    "protractor": "^7.0.0",
+    "sinon": "^11.1.2"
   }
 }
