--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
     "popper.js": "^1.16.1",
+    "rimraf": "^3.0.2",
     "rotating-file-stream": "^2.1.5",
     "rxjs": "^7.3.0",
     "serve-favicon": "^2.5.0",
