--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+uploads/
+.migrate
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
@@ -96,6 +98,3 @@ public/
 .dynamodb/
 
 # End of https://www.gitignore.io/api/node
-
-uploads
-.migrate
