--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wavdio-express",
+  "name": "@keep-in-mind/wavdio-express",
   "version": "2.0.3",
   "scripts": {
     "start": "node ./bin/server.js --db-uri $DB_URI",
