--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "mocha-junit-reporter": "^2.0.0",
     "protractor": "^7.0.0",
     "sinon": "^11.1.2"
+  },
+  "publishConfig": {
+    "@keep-in-mind:registry": "https://npm.pkg.github.com"
   }
 }
