--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@keep-in-mind/wavdio-express",
+  "name": "@xvlcw/wavdio-express",
   "version": "2.0.3",
   "scripts": {
     "start": "node ./bin/server.js --db-uri $DB_URI",
@@ -54,8 +54,5 @@
     "mocha-junit-reporter": "^2.0.0",
     "protractor": "^7.0.0",
     "sinon": "^11.1.2"
-  },
-  "publishConfig": {
-    "@keep-in-mind:registry": "https://npm.pkg.github.com"
   }
 }
