--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@xvlcw/wavdio-express",
-  "version": "2.0.3-3",
+  "name": "wavdio-express",
+  "version": "2.0.4",
   "scripts": {
     "start": "node ./bin/server.js --db-uri $DB_URI",
     "start:windows": "node ./bin/server.js --db-uri %DB_URI%",
