--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 
   wavdio-express:
     container_name: wavdio-express
-    image: xvlcw/wavdio-express:2.0.4
+    image: keepinmindbot/wavdio-express:2.0.4
     command: node ./bin/server.js --db-uri mongodb://wavdio-mongo:27017/
     networks:
       - wavdio-net
