--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "migrate": "^1.7.0",
+    "mongodb": "^4.1.3",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
     "popper.js": "^1.16.1",
