--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
   wavdio-express:
     container_name: wavdio-express
     build: .
-    command: node ./bin/server.js --db-uri mongodb://wavdio-mongo:27017/
+    command: node ./bin/server.js --db-uri mongodb://wavdio-mongo:27017/wavdio-express
     environment:
       - DB_URI=mongodb://wavdio-mongo:27017/
     networks:
