--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,40 +1,54 @@
 name: pipeline
 
-on:
-  release:
-    types: [published]
+on: [push]
 
 jobs:
 
-  deliver_npm:
-    runs-on: ubuntu-latest
+  test_start_node:
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org/
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
-  deliver_docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Checkout from GitHub
+        uses: actions/checkout@v2
+
+      - name: Start server
+        run: node bin/server.js
+
+      - name: Wait for server
+        uses: cygnetdigital/wait_for_response@v2.0.0
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-            keepinmindbot/wavdio-express:latest
-            keepinmindbot/wavdio-express:3
-            keepinmindbot/wavdio-express:3.0
-            keepinmindbot/wavdio-express:3.0.1
+          url: 'http://localhost:3000/'
+
+#
+#  deliver_npm:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#      - uses: actions/setup-node@v1
+#        with:
+#          node-version: 12
+#          registry-url: https://registry.npmjs.org/
+#      - run: npm publish --access public
+#        env:
+#          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+#
+#  deliver_docker:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      - name: Build and push
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          push: true
+#          tags: |
+#            keepinmindbot/wavdio-express:latest
+#            keepinmindbot/wavdio-express:3
+#            keepinmindbot/wavdio-express:3.0
+#            keepinmindbot/wavdio-express:3.0.1
