--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Checkout from GitHub
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Start server
         run: node bin/server.js
 
