--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,7 +12,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      - name: Start MongoDB
+        run: docker run --publish "27017:27017" --detach mongo
 
       - name: Start server
         run: node bin/server.js
