Run deliver_npm job in release pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,18 @@
-on: [ release ]
+on: [ push ]
 
 jobs:
 
-  test:
+  deliver_npm:
     runs-on: ubuntu-20.04
     steps:
-      - run: echo test
 
-#  test_npx_github:
-#    runs-on: ubuntu-20.04
-#    steps:
-#
-#      - name: Start MongoDB
-#        run: docker run --publish "27017:27017" --detach mongo
-#
-#      - name: Run server
-#        run: npx github:keep-in-mind/wavdio-express &
-#
-#      - name: Wait for server
-#        uses: cygnetdigital/wait_for_response@v2.0.0
-#        with:
-#          url: 'http://localhost:3000/'
+      - name: Checkout from GitHub
+        uses: actions/checkout@v2
 
-
+      - name: Publish npm package
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 #  test_npm_pack:
 #    runs-on: ubuntu-20.04
@@ -48,7 +38,7 @@ jobs:
 #        with:
 #          url: 'http://localhost:3000/'
 
-
+#
 #  deliver_docker:
 #    runs-on: ubuntu-latest
 #    steps:
