--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wavdio-express",
-  "version": "3.0.1",
+  "version": "3.0.1-test",
   "scripts": {
     "start": "node ./bin/server.js",
     "test": "mocha",
