--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   test_npx:
+    needs: deliver_npm
     runs-on: ubuntu-20.04
     steps:
 
@@ -26,55 +27,48 @@ jobs:
         run: docker run --publish "27017:27017" --detach mongo
 
       - name: Run server
-        run: npx wavdio-express@3.0.1-test-5 &
+        run: npx wavdio-express@3.0.1-test-6 &
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
         with:
           url: 'http://localhost:3000/'
 
-#  test_npm_pack:
-#    runs-on: ubuntu-20.04
-#    steps:
-#
-#      - name: Checkout from GitHub
-#        uses: actions/checkout@v2
-#
-#      - name: Create npm package
-#        run: npm pack
-#
-#      - name: Execute npm package
-#        run: npm install
-#
-#      - name: Start MongoDB
-#        run: docker run --publish "27017:27017" --detach mongo
-#
-#      - name: Run server
-#        run: npx start &
-#
-#      - name: Wait for server
-#        uses: cygnetdigital/wait_for_response@v2.0.0
-#        with:
-#          url: 'http://localhost:3000/'
+  deliver_docker:
+    runs-on: ubuntu-latest
+    steps:
 
-#
-#  deliver_docker:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
-#      - name: Build and push
-#        id: docker_build
-#        uses: docker/build-push-action@v2
-#        with:
-#          push: true
-#          tags: |
-#            keepinmindbot/wavdio-express:latest
-#            keepinmindbot/wavdio-express:3
-#            keepinmindbot/wavdio-express:3.0
-#            keepinmindbot/wavdio-express:3.0.1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: keepinmindbot
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            keepinmindbot/wavdio-express:latest
+            keepinmindbot/wavdio-express:3
+            keepinmindbot/wavdio-express:3.0
+            keepinmindbot/wavdio-express:3.0.1-test-6
+
+  test_docker:
+    needs: deliver_docker
+    runs-on: ubuntu-20.04
+    steps:
+
+      - name: Start MongoDB
+        run: docker run --publish "27017:27017" --detach mongo
+
+      - name: Run server
+        run: docker run --publish "3000:3000" --detach wavdio-express:3.0.1-test-6
+
+      - name: Wait for server
+        uses: cygnetdigital/wait_for_response@v2.0.0
+        with:
+          url: 'http://localhost:3000/'
