--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Start MongoDB
         run: docker run --publish "27017:27017" --detach mongo
 
-      - name: Run server
+      - name: Start server
         run: npm start &
 
       - name: Wait for server
