--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         run: docker run --publish "27017:27017" --detach mongo
 
       - name: Start server
-        run: npx wavdio-express@3.0.1-test-8 &
+        run: npx wavdio-express@3.0.1-test-9 &
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
@@ -55,18 +55,18 @@ jobs:
             keepinmindbot/wavdio-express:latest
             keepinmindbot/wavdio-express:3
             keepinmindbot/wavdio-express:3.0
-            keepinmindbot/wavdio-express:3.0.1-test-8
+            keepinmindbot/wavdio-express:3.0.1-test-9
 
   test_docker:
     needs: deliver_docker
     runs-on: ubuntu-20.04
     steps:
 
-      - name: Start MongoDB
-        run: docker run --publish "27017:27017" --detach mongo
-
-      - name: Start server
-        run: docker run --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.0.1-test-8
+      - name: Start MongoDB and server
+        run: |
+          docker network create wavdio-net
+          docker run --network wavdio-net --publish "27017:27017" --detach mongo
+          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.0.1-test-9
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
@@ -77,6 +77,9 @@ jobs:
     needs: deliver_docker
     runs-on: ubuntu-20.04
     steps:
+
+      - name: Checkout from GitHub
+        uses: actions/checkout@v2
 
       - name: Start MongoDB and server
         run: docker-compose up
