--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,9 @@
+#on:
+#  release:
+#    types: [ published ]
+
 on: [ push ]
+
 jobs:
 
   deliver_npm:
@@ -27,7 +32,7 @@ jobs:
         run: docker run --publish "27017:27017" --detach mongo
 
       - name: Start server
-        run: npx wavdio-express@3.0.1-test-13 &
+        run: npx wavdio-express@3.0.1-test-14 &
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
@@ -55,7 +60,7 @@ jobs:
             keepinmindbot/wavdio-express:latest
             keepinmindbot/wavdio-express:3
             keepinmindbot/wavdio-express:3.0
-            keepinmindbot/wavdio-express:3.0.1-test-13
+            keepinmindbot/wavdio-express:3.0.1-test-14
 
   test_docker:
     needs: deliver_docker
@@ -66,7 +71,7 @@ jobs:
         run: |
           docker network create wavdio-net
           docker run --name wavdio-mongo --network wavdio-net --detach mongo
-          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.0.1-test-13
+          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.0.1-test-14
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
