Adopt app.js to removed bin/server.js

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "wavdio-express",
-  "version": "3.0.1-test-14",
+  "version": "3.0.1-test-15",
   "scripts": {
-    "start": "node ./app.js",
+    "start": "node app.js",
     "test": "mocha",
     "mocha": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=./test-results/mocha.xml --exit"
   },
   "bin": {
-    "wavdio-express": "./app.js"
+    "wavdio-express": "app.js"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
