--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wavdio-express",
-  "version": "3.0.1-test-17",
+  "version": "3.0.1-test-18",
   "scripts": {
     "start": "node server.js",
     "test": "mocha",
@@ -12,50 +12,27 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^5.1.1",
     "command-line-args": "^5.2.0",
     "command-line-usage": "^6.1.1",
-    "core-js": "^3.17.3",
     "debug": "^4.3.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "express-jwt": "^6.1.0",
     "fs": "0.0.1-security",
     "http-errors": "^1.8.0",
-    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "migrate": "^1.7.0",
     "mongodb": "^4.1.3",
-    "mongoose": "^6.0.6",
+    "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
-    "popper.js": "^1.16.1",
     "rimraf": "^3.0.2",
-    "rotating-file-stream": "^2.1.5",
-    "rxjs": "^7.3.0",
-    "serve-favicon": "^2.5.0",
-    "slick-carousel": "^1.8.1",
-    "winston": "^3.3.3",
-    "xss-clean": "^0.1.1",
-    "zone.js": "^0.11.4"
+    "rotating-file-stream": "^2.1.6",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "chai-shallow-deep-equal": "^1.4.6",
-    "codelyzer": "^6.0.2",
-    "eslint": "^7.32.0",
-    "jasmine-core": "^3.9.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.4",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-firefox-launcher": "^2.1.1",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "karma-junit-reporter": "^2.0.1",
-    "mocha": "^9.1.1",
-    "mocha-junit-reporter": "^2.0.0",
-    "protractor": "^7.0.0",
-    "sinon": "^11.1.2"
+    "eslint": "^8.1.0",
+    "mocha": "^9.1.1"
   }
 }
