Remove 404 error handler

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
-#on:
-#  release:
-#    types: [ published ]
-
-on: [ push ]
+on:
+  release:
+    types: [ published ]
 
 jobs:
 
@@ -32,7 +30,7 @@ jobs:
         run: docker run --publish "27017:27017" --detach mongo
 
       - name: Start server
-        run: npx wavdio-express@3.0.1-test-21 &
+        run: npx wavdio-express@3.1.0 &
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
@@ -59,8 +57,8 @@ jobs:
           tags: |
             keepinmindbot/wavdio-express:latest
             keepinmindbot/wavdio-express:3
-            keepinmindbot/wavdio-express:3.0
-            keepinmindbot/wavdio-express:3.0.1-test-21
+            keepinmindbot/wavdio-express:3.1
+            keepinmindbot/wavdio-express:3.1.0
 
   test_docker:
     needs: deliver_docker
@@ -71,7 +69,7 @@ jobs:
         run: |
           docker network create wavdio-net
           docker run --name wavdio-mongo --network wavdio-net --detach mongo
-          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.0.1-test-21
+          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.1.0
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
