--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 
   wavdio-express:
     container_name: wavdio-express
-    image: keepinmindbot/wavdio-express:3.0.1-test-21
+    image: keepinmindbot/wavdio-express:3.1.0
     networks:
       - wavdio-net
     ports:
