--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wavdio-express",
-  "version": "3.0.1-test-21",
+  "version": "3.1.0",
   "scripts": {
     "start": "node server.js",
     "test": "mocha",
@@ -17,7 +17,6 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
-    "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "migrate": "^1.7.0",
     "mongodb": "^4.1.3",
