--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,7 @@ jobs:
         with:
           push: true
           tags: |
-#            keepinmindbot/wavdio-express:latest
-#            keepinmindbot/wavdio-express:3
-#            keepinmindbot/wavdio-express:3.1
+            keepinmindbot/wavdio-express:latest
             keepinmindbot/wavdio-express:3.1.0-test
 
   test_docker:
