--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,6 @@
-on: [push]
+on:
+  release:
+    types: [ published ]
 
 jobs:
 
@@ -28,7 +30,7 @@ jobs:
         run: docker run --publish "27017:27017" --detach mongo
 
       - name: Start server
-        run: npx wavdio-express@3.1.0-test-4 &
+        run: npx wavdio-express@3.1.0-test-2 &
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
@@ -54,7 +56,7 @@ jobs:
           push: true
           tags: |
             keepinmindbot/wavdio-express:latest
-            keepinmindbot/wavdio-express:3.1.0-test-4
+            keepinmindbot/wavdio-express:3.1.0-test-2
 
   test_docker:
     needs: deliver_docker
@@ -65,7 +67,7 @@ jobs:
         run: |
           docker network create wavdio-net
           docker run --name wavdio-mongo --network wavdio-net --detach mongo
-          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.1.0-test-4
+          docker run --network wavdio-net --publish "3000:3000" --detach keepinmindbot/wavdio-express:3.1.0-test-2
 
       - name: Wait for server
         uses: cygnetdigital/wait_for_response@v2.0.0
